--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "php": "^7.3|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^6.21",
+        "illuminate/database": "^8.62"
     },
     "autoload": {
         "psr-4": {
@@ -27,4 +29,3 @@
         }
     }
 }
-
