--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0"
+        "php": "^7.3|^8.0",
+        "illuminate/database": "^8.68",
+        "moves/eloquent-castable": "^1.0.0-alpha.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "orchestra/testbench": "^6.21",
-        "illuminate/database": "^8.62"
+        "orchestra/testbench": "^6.21"
     },
     "autoload": {
         "psr-4": {
