--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/database": "^8.68",
-        "moves/eloquent-subtypeable": "^2.0.0"
+        "php": "^8.1",
+        "illuminate/database": "^9.0",
+        "moves/eloquent-subtypeable": "^3.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "orchestra/testbench": "^6.21",
+        "orchestra/testbench": "^7.7",
         "captainhook/captainhook": "^5.10",
         "marcocesarato/php-conventional-changelog": "^1.12",
-        "moves/conventional-commits": "^1.0"
+        "moves/conventional-commits": "^2.0"
     },
     "autoload": {
         "psr-4": {
